--- a/snippets/shop-the-look-carousel-1.liquid
+++ b/snippets/shop-the-look-carousel-1.liquid
@@ -33,25 +33,66 @@
         }
       ]
     });
-
     $('.stl-right--slider').slick({
       dots: true,
-      infinite: false,
-      speed: 300,
+      infinite: true,
+      speed: 1000,
+      fade: true ,
       arrows: false,
       slidesToShow: 1,
       slidesToScroll: 1,
       customPaging : function(slider, i) {
         return '<span></span>';
-      }
+      },
+      responsive: [
+        {
+          breakpoint: 991,
+          settings: {
+            fade: true
+          }
+        },
+        {
+          breakpoint: 767,
+          settings: {
+            fade: true
+          }
+        },
+        {
+          breakpoint: 480,
+          settings: {
+            fade: false
+          }
+        }
+      ]
     });
+    /*
+    $( window ).resize( function(){
+      $onlyDesktop = ($(window).width() >= 480px);
+      console.log($onlyDesktop);
+      $('.stl-right--slider').slick({
+        dots: true,
+        autoplay: $onlyDesktop ,
+        autoplaySpeed: 3000,
+        infinite: true,
+        speed: 1000,
+        fade: $onlyDesktop,
+        arrows: false,
+        slidesToShow: 1,
+        slidesToScroll: 1,
+        customPaging : function(slider, i) {
+          return '<span></span>';
+        }
+      });
+    }); */
+    
+
     var $scale,$transform,i,e,n,s,a,o,r,l;
-    $('.stl-dot').click(function(){
+    $('.stl-dot').mouseenter(function(){
       var $index = $(this).data('index');
       $('.stl-right--slider').slick('slickGoTo',$index);
       $('.stl-dot').removeClass('stl-dot--active');
       $(this).addClass('stl-dot--active');
-      if($(window).width() <= 991){
+      if($(window).width() <= 480){
         if(!$('.stl-wrapper').hasClass('zoomed-in')){
           $scale = 1+($('.stl-left').width()/$(window).width());
           $('html,body').addClass('no-scroll');
@@ -99,19 +140,37 @@
   a {
   	outline: none;
   }
-  
+  @media (max-width: 480px ) {
+    .mobile-none {
+     padding: 0rem 0rem !important; 
+    }
+    .mobile-small {
+     padding: 0.5rem 0rem !important; 
+    }
+    .mobile-medium {
+     padding: 1rem 0rem !important; 
+    }
+    .mobile-big {
+     padding: 2rem 0rem !important; 
+    }
+  }
+
   .index--shop-the-look {
-    margin: {{ section.settings.section-margin }}px 0;
+    
   }
   
   .stl-wrapper {
-    max-width: 880px;
+    width: {{section.settings.max-width}}%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;    
-    margin-top: 50px;
     justify-content: space-between;
     align-items: center;
+  }
+  @media (max-width: 480px) {
+    .stl-wrapper {
+      width: {{section.settings.max-width-mobile}}%;
+    }
   }
   .index--shop-the-look .top-title {
     text-align: center;
@@ -125,24 +184,23 @@
     margin-bottom: 20px;
     font-size: 55px;
   }
-  .stl-left {
+  .stl-left, .stl-2-left, .stl-3-left, .stl-4-left, .stl-5-left {
     width: 50%;
   }
-  .stl-left {
-    padding: 0 10px;
+  .stl-left, .stl-2-left, .stl-3-left, .stl-4-left, .stl-5-left {
     transition: all .3s ease;
   }
-  .stl-item {
+  .stl-item, .stl-2-item, .stl-3-item, .stl-4-item, .stl-5-item {
     display: flex;
     align-items: center;
     padding: 0;
   }
-  .stl-right {
-    width: 40%;
+  .stl-right, .stl-2-item, .stl-3-item, .stl-4-item, .stl-5-item {
+    width: 50%;
     position: relative;
   }
 
-  .stl-right--inner .stl-right--slider {
+  .stl-right--inner .stl-right--slider, .stl-2-right--inner .stl-2-right--slider, .stl-3-right--inner .stl-3-right--slider, .stl-4-right--inner .stl-4-right--slider, .stl-5-right--inner .stl-5-right--slider {
     position: static;
     display: none;
   }
@@ -155,7 +213,7 @@
   .stl-item .title {
     font-weight: normal;
     margin: 10px 0;
-    font-size: 15px;
+    font-size: 23px;
   }
 
   .stl-item .price {
@@ -166,7 +224,6 @@
     margin: 0 auto;
     margin-top: 20px;
     display: inline-block;
-    border: 1px solid black;
     padding: 0.2rem 2rem;
 }
   .stl-btn-active {
@@ -230,8 +287,8 @@
   }
 
   .stl-left .stl-dot {
+    display:inline-block;
     position: absolute;
-    display: inline-block;
     width: 16px;
     height: 16px;
     margin: -8px 0 0 -8px;
@@ -240,11 +297,12 @@
     box-shadow: 0 1px 10px rgba(0,0,0,0.25);
     cursor: pointer;
     z-index: 1;
-    transform: scale(1);
+    transform: scale(0.5);
     transition: transform 0.25s ease-in-out;
   }
+  
   .stl-left .stl-dot.stl-dot--active,.stl-left .stl-dot:hover  {
-    transform: scale(1.5);
+    transform: scale(0.7);
   }
   .stl-left .stl-dot::after {
     position: absolute;
@@ -260,8 +318,15 @@
   }
   .stl-img img {
     margin: auto;
-    max-height: 350px;
+    max-height: 300px;
     object-fit: contain;
+  }
+  @media(max-width: 600px) {
+    .stl-img img, .stl-2-img img, .stl-3-img img, .stl-4-img img, .stl-5-img img {
+      margin: auto;
+      max-height: 200px;
+      object-fit: contain;
+    }
   }
   .stl-mobile-btns {
     display: none;
@@ -272,7 +337,16 @@
   .no-scroll {
     overflow: hidden !important;
   }
-  @media(max-width: 991px){
+  @media(max-width: 480px){
+    .stl-left .stl-dot {
+      display: inline-block;
+    }
+    .stl-right, .stl-2-right, .stl-3-right, .stl-4-right, .stl-5-right {
+      position: absolute;
+      bottom: 0;
+    }
+    .some {
+    }
     .stl-right--inner {
       opacity: 0;
       visibility: hidden;
@@ -294,10 +368,14 @@
       -webkit-transform: translateY(0);
       transform: translateY(0);
     }
+    .zoomed-in .stl-left img, .zoomed-in .stl-2-left img, .zoomed-in .stl-3-left img, .zoomed-in .stl-4-left img, .zoomed-in .stl-5-left img {
+      height: 68vh;
+      object-fit: cover;
+    }
     .stl-wrapper.zoomed-in .stl-left {
       z-index: 999;
     }
-    .stl-left, .stl-right {
+    .stl-left, .stl-right, .stl-2-left, .stl-2-right, .stl-3-left, .stl-3-right, .stl-4-left, .stl-4-right, .stl-5-left, .stl-5-right {
       width: 100%;
       max-width: 500px;
     }
@@ -305,38 +383,38 @@
       transition: transform .4s ease;
     }
     
-    .stl-mobile-btns {
+    .stl-mobile-btns, .stl-2-mobile-btns, .stl-3-mobile-btns , .stl-4-mobile-btns , .stl-5-mobile-btns {
       display: block;
       max-width: 300px;
       margin: 30px auto;
+      color: white !important;
+      background: black;
     }
 
-    .stl-mobile-btns a {
-    }
-    .stl-wrapper {
-      padding: 0 20px;
+    .stl-wrapper, .stl-2-wrapper, .stl-3-wrapper, .stl-4-wrapper, .stl-5-wrapper {
+      padding: 0;
       justify-content: center;
+      position: relative;
     }
-    .stl-right-header {
-      border-bottom: 1px solid #eee;
+    .stl-right-header, .stl-2-right-header, .stl-3-right-header, .stl-4-right-header, .stl-5-right-header {
       position: relative;
       margin-bottom: 20px;
       display: block;
     }
 
-    .stl-right-header span svg {
+    .stl-right-header span svg, .stl-2-right-header span svg, .stl-3-right-header span svg, .stl-4-right-header span svg, .stl-5-right-header span svg {
       width: 16px;
       height: 16px;
     }
 
-    .stl-right-header .subtitle {
+    .stl-right-header .subtitle, .stl-2-right-header .subtitle, .stl-3-right-header .subtitle, .stl-4-right-header .subtitle, .stl-5-right-header .subtitle {
       font-size: 16px;
       padding: 15px 0;
       font-weight: normal;
       margin: 0;
     }
 
-    .stl-right-header span {
+    .stl-right-header span, .stl-2-right-header span, .stl-3-right-header span, .stl-4-right-header span, .stl-5-right-header span {
       position: absolute;
       left: 15px;
       top: 50%;
@@ -346,23 +424,10 @@
     .stl-item .stl-btn {
       display: none;
     }
-  }
-  @media(max-width: 767px){
-    .index--shop-the-look .subtitle {
-      font-size: 35px;
-    }
-    .stl-right-header .subtitle {
-      font-size: 16px;
-    }
-    
-    .stl-img img {
-    	max-height: 200px;
-      object-fit: contain;
-    }
-  }
-  
+  }  
   .slick-dots {
-    position: absolute;
+    position: relative; 
+    padding-top: 1rem;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
@@ -377,79 +442,91 @@
     margin: 10px !important;
 }
 </style>
+{% capture stl_image %}
+<div class="stl-left">
+  <div class="stl-left--inner">
+    {% if section.settings.image != blank %}
+      {%- liquid 
+        assign image_alt_1 = section.settings.image.alt
+        assign  image_url_small_1 = section.settings.image | img_url: '60x'
+        assign  image_url_210_1 = section.settings.image | img_url: '210x'
+        assign  image_url_420_1 = section.settings.image | img_url: '420x'
+        assign  image_url_730_1 = section.settings.image | img_url: '730x'
+        assign  image_url_1270_1 = section.settings.image | img_url: '1270x'
+        assign  image_url_1650_1 = section.settings.image | img_url: '1650x'
+        assign  image_url_2000_1 = section.settings.image | img_url: '2000x'
+        -%}
+        <img loading="lazy"  src="{{ image_url_small_1 }}"
+          data-srcset="{{ image_url_210_1 }} 210w, {{ image_url_420_1 }} 420w, {{ image_url_730_1 }} 730w  {{ image_url_1270_1 }} 1270w, {{ image_url_1650_1 }} 1650w,  {{ image_url_2000_1 }} 2000w"
+          data-sizes="auto"  alt="{{ image_alt_1 }}"
+          class="lazyload"
+          />
+    {% endif %}
+    {% for block in section.blocks %}
+    {% if block.settings.product != blank %}
+    <span class="stl-dot {% if forloop.first %}stl-dot--active{% endif %}" data-index="{{ forloop.index0 }}" style="top:{{ block.settings.top }}%;left:{{ block.settings.left }}%;"></span>
+    {% endif %}
+    {% endfor %}
+    </div>
+  </div>
+{% endcapture %}
 
-<div class="index--shop-the-look">
-  {% if section.settings.title != blank %}<h4 class="top-title">{{ section.settings.title }}</h4>{% endif %}
-  {% if section.settings.subtitle != blank %}<h3 class="subtitle">{{ section.settings.subtitle }}</h3>{% endif %}
-  <div class="stl-wrapper">
-    <div class="stl-left">
-      <div class="stl-left--inner">
-        {% if section.settings.image != blank %}
-          {%- liquid 
-            assign image_alt_1 = section.settings.image.alt
-            assign  image_url_small_1 = section.settings.image | img_url: '60x'
-            assign  image_url_210_1 = section.settings.image | img_url: '210x'
-            assign  image_url_420_1 = section.settings.image | img_url: '420x'
-            assign  image_url_730_1 = section.settings.image | img_url: '730x'
-            assign  image_url_1270_1 = section.settings.image | img_url: '1270x'
-            assign  image_url_1650_1 = section.settings.image | img_url: '1650x'
-            assign  image_url_2000_1 = section.settings.image | img_url: '2000x'
-            -%}
-            <img loading="lazy"  src="{{ image_url_small_1 }}"
-              data-srcset="{{ image_url_210_1 }} 210w, {{ image_url_420_1 }} 420w, {{ image_url_730_1 }} 730w  {{ image_url_1270_1 }} 1270w, {{ image_url_1650_1 }} 1650w,  {{ image_url_2000_1 }} 2000w"
-              data-sizes="auto"  alt="{{ image_alt_1 }}"
-              class="lazyload"
-              />
-        {% endif %}
+{% capture stl_products %}
+  <div class="stl-right">
+    <div class="stl-right--inner">
+      <div class="stl-right-header">
+        <span>
+          <svg class="Icon Icon--close" role="presentation" viewBox="0 0 16 14">
+            <path d="M15 0L1 14m14 0L1 0" stroke="currentColor" fill="none" fill-rule="evenodd"></path>
+          </svg>
+        </span>
+        {% if section.settings.subtitle != blank %}<h3 class="subtitle">{{ section.settings.subtitle }}</h3>{% endif %}
+      </div>
+      <div class="stl-right--slider">
         {% for block in section.blocks %}
         {% if block.settings.product != blank %}
-        <span class="stl-dot {% if forloop.first %}stl-dot--active{% endif %}" data-index="{{ forloop.index0 }}" style="top:{{ block.settings.top }}%;left:{{ block.settings.left }}%;"></span>
+          {%- liquid
+            assign thisProduct = all_products[block.settings.product]
+            assign image_alt = thisProduct.alt
+            assign  image_url_small = thisProduct | img_url: '60x'
+            assign  image_url_210 = thisProduct | img_url: '210x'
+            assign  image_url_420 = thisProduct | img_url: '420x'
+            assign  image_url_730 = thisProduct | img_url: '730x'
+            -%}
+        <div class="stl-item">
+          <a href="{{ thisProduct.url }}">
+          <div class="stl-img">
+            <img loading="lazy"  src="{{ image_url_small }}"
+            data-srcset="{{ image_url_210 }} 210w, {{ image_url_420 }} 420w, {{ image_url_730 }} 730w"
+            data-sizes="auto"  alt="{{ image_alt }}"
+            class="lazyload"
+            />
+          </div>
+          <h4 class="title">{{ thisProduct.title }}</h4>
+          {% comment %} <h5 class="price">{{ thisProduct.price | money }}</h5> {% endcomment %}
+          </a>
+          <a class="stl-btn" href="{{ thisProduct.url }}" class="{% if section.settings.button-class %}{{ section.settings.button-class }}{% endif %}">{{ section.settings.cta_text }}</a>
+        </div>
         {% endif %}
         {% endfor %}
       </div>
     </div>
-    <div class="stl-right">
-      <div class="stl-right--inner">
-        <div class="stl-right-header">
-          <span>
-            <svg class="Icon Icon--close" role="presentation" viewBox="0 0 16 14">
-              <path d="M15 0L1 14m14 0L1 0" stroke="currentColor" fill="none" fill-rule="evenodd"></path>
-            </svg>
-          </span>
-          {% if section.settings.subtitle != blank %}<h3 class="subtitle">{{ section.settings.subtitle }}</h3>{% endif %}
-        </div>
-        <div class="stl-right--slider">
-          {% for block in section.blocks %}
-          {% if block.settings.product != blank %}
-            {%- liquid
-              assign thisProduct = all_products[block.settings.product]
-              assign image_alt = thisProduct.alt
-              assign  image_url_small = thisProduct | img_url: '60x'
-              assign  image_url_210 = thisProduct | img_url: '210x'
-              assign  image_url_420 = thisProduct | img_url: '420x'
-              assign  image_url_730 = thisProduct | img_url: '730x'
-              -%}
-          <div class="stl-item">
-            <a href="{{ thisProduct.url }}">
-            <div class="stl-img">
-              <img loading="lazy"  src="{{ image_url_small }}"
-              data-srcset="{{ image_url_210 }} 210w, {{ image_url_420 }} 420w, {{ image_url_730 }} 730w"
-              data-sizes="auto"  alt="{{ image_alt }}"
-              class="lazyload"
-              />
-            </div>
-            <h4 class="title">{{ thisProduct.title }}</h4>
-            <h5 class="price">{{ thisProduct.price | money }}</h5>
-            </a>
-            <a class="stl-btn" href="{{ thisProduct.url }}" class="{% if section.settings.button-class %}{{ section.settings.button-class }}{% endif %}">{{ section.settings.cta_text }}</a>
-          </div>
-          {% endif %}
-          {% endfor %}
-        </div>
-      </div>
-      <div class="stl-btn stl-mobile-btns">
-        <a href="javascript:void(0);" onclick="$('.stl-dot--active').trigger('click')" data-index="{{ forloop.index0 }}" {% if forloop.first %}style="display:block;"{% endif %} class="{% if section.settings.button-class %}{{ section.settings.button-class }}{% endif %}">{{ section.settings.cta_text_mobile }}</a>
-      </div>
+    <div class="stl-btn stl-mobile-btns">
+      <a href="javascript:void(0);" onclick="$('.stl-dot--active').trigger('click')" data-index="{{ forloop.index0 }}" {% if forloop.first %}style="display:block;"{% endif %} class="{% if section.settings.button-class %}{{ section.settings.button-class }}{% endif %}">{{ section.settings.cta_text_mobile }}</a>
     </div>
+  </div>
+{% endcapture %}
+
+<div class="index--shop-the-look mobile-{{section.settings.mobile-margin}}" style="padding: {{ section.settings.section-margin-top }}px 0px {{section.settings.section-margin-bottom}}px 0px;">
+  {% if section.settings.title != blank %}<h4 class="top-title">{{ section.settings.title }}</h4>{% endif %}
+  {% if section.settings.subtitle != blank %}<h3 class="subtitle">{{ section.settings.subtitle }}</h3>{% endif %}
+  <div class="stl-wrapper">
+      {% if section.settings.img_side == 'left' %}
+     	 {{ stl_image }}
+     	 {{ stl_products }}
+      {% else %}
+      {{ stl_products }}
+      {{ stl_image }}
+      {% endif %}
   </div>  
 </div>
