--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6149,7 +6149,6 @@ body {
   font-weight: 400;
   font-family: $text-font;
   color: $text-color;
-  line-height: 1.6;
   scroll-behavior: smooth;
 }
 
@@ -12820,7 +12819,6 @@ height: 300px;
   z-index: 1;
   background: transparent;
   letter-spacing: 0.1em;
-  line-height: 1.7;
   z-index: 2;
 
   a {
@@ -12911,7 +12909,6 @@ height: 300px;
     top: 55px;
     left: 0;
     background: #fff;
-    padding-bottom: 30px;
     z-index: 3;
     width:	100%;
 
@@ -12927,7 +12924,7 @@ height: 300px;
     float: left;
     padding-right: 0;
     font-size: 15px;
-    line-height: 1.3;
+    // line-height: 1.3;
     width:	100%;
 
     a {
@@ -13193,7 +13190,6 @@ height: 300px;
 
 .footer {
   &.footer {
-    background-color: #31ffe3;  // #31ffb3
     border-top: 1px solid #333;
   }
   .inner {
@@ -14479,7 +14475,7 @@ margin-top: 0;
 
 
 .home__featured-headline, .index-module__featured-text {
-	padding: 5% 6%;
+	padding: 1.5rem 2.5rem;
 }
 
 
@@ -16735,6 +16731,7 @@ h2.faq {
 /* CSS FOR UPDATED MEGACUSTOM-NAV */
 .dis-flex {
   display: flex !important;
+  justify-content: space-evenly;
 }
 
 .top-mega-nav-link-image-right-text {
@@ -16754,17 +16751,21 @@ h2.faq {
 
 .nav-title {
   font-weight: 500;
-  margin-bottom: 20px;
   text-transform: uppercase;
   color: #000;
-  letter-spacing: 0.15em;
+  letter-spacing: .15em;
+  position: absolute;
+  bottom: 5px;
+  padding: 5px 0px 0px 5px;
+  width: 100%;
+  background: linear-gradient(90deg, rgba(255,255,255,0.3) 0%, rgba(0,212,255,0) 100%)
 }
 
 .top-mega-nav-link-list-mm-multi {
   text-align: left;
 }
 .mega-nav-img {
-  max-height: 500px;
+  
   object-fit: cover;
   object-position: top;
 }
