--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,286 +1,114 @@
-{% if settings.header_version != "Nested"%}
+{%- style -%}
+
+.logo_bijules {
+
+}
+
+{%- endstyle -%}  
+  
   {% comment %} Mega-Nav 1.0 & Mega-Nav 2.0 Header {% endcomment %}
 <header class="header {% if settings.navigation_mode == 'horizontal' %}header--with-horizontal-nav{% endif %}" role="banner">
-  <div class="container-fluid big-padding">
+  <div class="container-fluid" style="background: white;">
     <div class="row">
       <div class="header__wrapper">
         <div class="header__item header__item-toggle">
           <a href="#" class="header__link" data-action="open-navigation-sidebar">
-
-            {% comment %}<div class="header-navigation-text-link menu-text desk-header-item">Menu</div>{% endcomment %}
-
             <div class="mobile-header-item">{% include 'icon' with 'hamburger' %}</div>
           </a>
         </div>
+        {% if settings.navigation_mode == 'horizontal' %}
+          <nav class="navigation-horizontal" role="navigation">
 
-        {% comment %}
-        {% if template.name == 'index' %}
-        <h1 class='header--logo'>
-          {% else %}
-          <div class="header--logo">
-            {% endif %}
-            <a href="/" class="logo">
-              <img loading="lazy" src='{{ "logo-w.svg" | asset_url }}' alt="{{ shop.name }}"/>
-              <img loading="lazy" src='{{ "logo-b.svg" | asset_url }}' alt="{{ shop.name }}"/>
-            </a>
-            {% if template.name == 'index' %}
-            </h1>
-          {% else %}
-          </div>
-      </div>
-      {% endif %}
-      {% endcomment %}
-      
-      <div class="header__item-logo">
-        <div class="header__logo">
-          <a href="{{ shop.url }}" class="header__link">
-            <img loading="lazy" class="header__logo-image" 
-                 src="{{ section.settings.logo | img_url }}"
-                 width="{{ section.settings.logo_max_width | replace: 'px', '' }}" 
-                 alt="{{ section.settings.logo.alt | default: shop.name }}" 
-                 itemprop="logo">
-          </a>
-        </div>
-      </div>
-
-
-       {% if settings.navigation_mode == 'horizontal' %}
-        <nav class="navigation-horizontal" role="navigation">
-          {% if settings.header_version == "Mega-Nav 1.0"%}
-            {% render 'navigation-custom-top-megamenu', level: 0 %}
-          {% elsif settings.header_version == "Mega-Nav 2.0"%}
             {% render 'navigation-custom-top-megamenu-new', level: 0 %}
-          {% endif %} 
-        </nav> 
-      {% endif %}
-      
-
-
-
-      <div class="header__item header__item-cart">
-        <a href="/cart" class="header__link" {% if settings.cart_page == 'drawer' and template != 'cart' %}data-action="open-mini-cart"{% endif %}>
-          <div class="cart-icon-wrapper cart-icon-wrapper--has-items" {% if cart.item_count == 0 %}style="display: none"{% endif %}>
-            <div class="desk-header-item header-navigation-text-link">
-              <span class="cart-text">{{ 'cart.general.title' | t }}<span class="cart-icon-wrapper__count">({{ cart.item_count }})</span></span>
+          </nav> 
+        {% endif %}
+        <div class="header__item header__item-cart">
+          <a href="/cart" class="header__link" {% if settings.cart_page == 'drawer' and template != 'cart' %}data-action="open-mini-cart"{% endif %}>
+            <div class="cart-icon-wrapper cart-icon-wrapper--has-items" {% if cart.item_count == 0 %}style="display: none"{% endif %}>
+              <div class="desk-header-item header-navigation-text-link">
+                <span class="cart-text">{{ 'cart.general.title' | t }}<span class="cart-icon-wrapper__count">({{ cart.item_count }})</span></span>
+              </div>
+              <div class="mobile-header-item">
+                {% include 'icon' with 'cart-full' %}
+                <span class="cart-icon-wrapper__count">({{ cart.item_count }})</span>
+              </div>
             </div>
-            <div class="mobile-header-item">
-              {% include 'icon' with 'cart-full' %}
-              <span class="cart-icon-wrapper__count">({{ cart.item_count }})</span>
+            <div class="cart-icon-wrapper cart-icon-wrapper--empty" {% unless cart.item_count == 0 %}style="display: none"{% endunless %}>
+              <div class="header-navigation-text-link cart-text desk-header-item">{{ 'cart.general.title' | t }}</div>
+              <div class="mobile-header-item">{% include 'icon' with 'cart-empty' %}</div>
             </div>
+          </a>
+        </div> 
+        {% if shop.customer_accounts_enabled %}
+          <div class="header__item header__item-account">
+            <a href="/account{% unless customer %}/login{% endunless %}" class="header__link ">
+              <div class="header-navigation-text-link account-text">My Account</div>
+            </a>
           </div>
-          <div class="cart-icon-wrapper cart-icon-wrapper--empty" {% unless cart.item_count == 0 %}style="display: none"{% endunless %}>
-            <div class="header-navigation-text-link cart-text desk-header-item">{{ 'cart.general.title' | t }}</div>
-            <div class="mobile-header-item">{% include 'icon' with 'cart-empty' %}</div>
-          </div>
-        </a>
-      </div> 
-      {% if shop.customer_accounts_enabled %}
-      <div class="header__item header__item-account">
-        <a href="/account{% unless customer %}/login{% endunless %}" class="header__link ">
-          <div class="header-navigation-text-link account-text">Mein Konto</div>
-          {% comment %}{% include 'icon' with 'profile' %}{% endcomment %}
-        </a>
-      </div>
-      {% endif %}
-
-      {% comment %}
-      <div class="header__item header__item-language-switch">
-        {% include 'ly-languages-switcher' %}
-      </div>
-      {% endcomment %}
-
-      {% comment %}
-      <!-- custom menu for ADDeerts header right -->
-      <nav class="navigation-horizontal-right" role="navigation">
-        {% include 'navigation-custom-top-mega-right', level: 0 %}
-      </nav>
-      {% endcomment %}
-
-
-      <div class="header__item header__item-search">
-        <a href="/search" class="header__link" data-action="open-search">
-          {% comment %}<div class="header-navigation-text-link search-text">Suche</div>{% endcomment %}
-          {% include 'icon' with 'search' %}
-        </a>
-        <div class="header__search-wrapper">
-          <a href="#" class="header__link">
+        {% endif %}
+        <div class="header__item header__item-search">
+          <a href="/search" class="header__link" data-action="open-search">
             {% include 'icon' with 'search' %}
           </a>
-          <form class="header__search-form" action="/search" method="GET" role="search">
-            <input type="hidden" name="type" value="{{ settings.search_mode }}">
-            <input type="search" name="q" class="search__input" autocomplete="off" autocorrect="off" aria-label="{{ 'search.autocomplete.input_placeholder' | t }}" placeholder="{{ 'search.autocomplete.input_placeholder' | t }}" value="{{ search.terms | escape }}">
-          </form>
-          <a href="#" class="header__link header__search-close" data-action="close-search">
-            {% include 'icon' with 'close-thin' %}
-          </a>
-          <div class="autocomplete">
-            <span class="autocomplete__spinner" style="display: none">
-              <svg width="50" height="50" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="{{ settings.header_color }}">
-                <g fill="none" fill-rule="evenodd">
-                  <g transform="translate(1 1)" stroke-width="2">
-                    <circle stroke-opacity=".5" cx="18" cy="18" r="18"></circle>
-                    <path d="M36 18c0-9.94-8.06-18-18-18"></path>
+          <div class="header__search-wrapper">
+            <a href="#" class="header__link">
+              {% include 'icon' with 'search' %}
+            </a>
+            <form class="header__search-form" action="/search" method="GET" role="search">
+              <input type="hidden" name="type" value="{{ settings.search_mode }}">
+              <input type="search" name="q" class="search__input" autocomplete="off" autocorrect="off" aria-label="{{ 'search.autocomplete.input_placeholder' | t }}" placeholder="{{ 'search.autocomplete.input_placeholder' | t }}" value="{{ search.terms | escape }}">
+            </form>
+            <a href="#" class="header__link header__search-close" data-action="close-search">
+              {% include 'icon' with 'close-thin' %}
+            </a>
+            <div class="autocomplete">
+              <span class="autocomplete__spinner" style="display: none">
+                <svg width="50" height="50" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="{{ settings.header_color }}">
+                  <g fill="none" fill-rule="evenodd">
+                    <g transform="translate(1 1)" stroke-width="2">
+                      <circle stroke-opacity=".5" cx="18" cy="18" r="18"></circle>
+                      <path d="M36 18c0-9.94-8.06-18-18-18"></path>
+                    </g>
                   </g>
-                </g>
-              </svg>
-            </span>
+                </svg>
+              </span>
+            </div>
           </div>
         </div>
-      </div>
+
+
 
 
 
       {% if settings.currency_conversion_enabled %}
-      <div class="header__item header__item-currency">
-        {% include 'currency_selector' %}
-      </div>
-      {% endif %}
-
-
-      {% if section.settings.show_social_media %}
-      {% capture social_media %}
-      {% include 'social_networks', show_social_name: false %}
-      {% endcapture %}
-
-      {% if social_media != blank %}
-      <div class="header__item header__item-social">
-        {{ social_media }}
-      </div>
-      {% endif %}
-      {% endif %}
-      
-      <div class="header__item-logo-add">
-        <div class="header__logo">
-          <a href="{{ shop.url }}" class="header__link">
-            <img loading="lazy" class="header__logo-image" 
-                 src="{{ section.settings.logo | img_url }}"
-                 alt="{{ section.settings.logo.alt | default: shop.name }}" 
-                 itemprop="logo">
-          </a>
+        <div class="header__item header__item-currency">
+          {% include 'currency_selector' %}
         </div>
-      </div>
+      {% endif %}
 
-    </div>
-  </div>
-</header>
-{% else %}
-{% comment %} Nested Header {% endcomment %}
-<header class="header {% if settings.navigation_mode == 'horizontal' %}header--with-horizontal-nav{% endif %} " role="banner">
-  <div class="header__wrapper new-header-flex">
-    <div class="header__item header__item-toggle">
-      <a href="#" class="header__link" data-action="open-navigation-sidebar">
-        {% render 'icon' with 'hamburger' %}
-      </a>
-    </div>
 
-    {% if settings.navigation_mode == 'horizontal' %}
-      <div class="navigation-horizontal" role="navigation">
-        {% render 'navigation-horizontal-lists-new', level: 0 %}
-      </div>
-    {% endif %}
-
-    <div class="header__item-logo">
-      <div class="header__logo">
-        <a href="{{ shop.url }}" class="header__link">
-          <img loading="lazy" class="header__logo-image" 
-            src="{{ section.settings.logo | img_url }}"
-            width="{{ section.settings.logo_max_width | replace: 'px', '' }}" 
-            alt="{{ section.settings.logo.alt | default: shop.name }}" 
-            itemprop="logo">
-          </a>
-        </div>
-      </div>
-    <div >
       {% if section.settings.show_social_media %}
         {% capture social_media %}
-          {% render 'social-networks', show_social_name: false %}
+          {% include 'social_networks', show_social_name: false %}
         {% endcapture %}
-
         {% if social_media != blank %}
           <div class="header__item header__item-social">
             {{ social_media }}
           </div>
         {% endif %}
       {% endif %}
-
-      {% if shop.customer_accounts_enabled %}
-        <div class="header__item header__item-account">
-          <a href="{{ routes.account_url }}" class="header__link">
-            {% render 'icon' with 'profile' %}
+      
+      <div class="logo_bijules">
+          <a href="{{ shop.url }}">
+            <img loading="lazy" 
+                 src="{{ section.settings.logo | img_url }}"
+                 alt="{{ section.settings.logo.alt | default: shop.name }}" 
+                 itemprop="logo" />
           </a>
-        </div>
-      {% endif %}
-
-      <div class="header__item no-float header__item-search">
-        <a href="{{ routes.search_url }}" class="header__link" data-action="open-search">
-          {% render 'icon' with 'search' %}
-        </a>
-
-        <div class="header__search-wrapper">
-          <a href="#" class="header__link">
-            {% render 'icon' with 'search' %}
-          </a>
-
-          <form class="header__search-form" action="{{ routes.search_url }}" method="GET" role="search">
-            <input type="hidden" name="type" value="{{ settings.search_mode }}">
-            <input type="search" name="q" class="search__input" autocomplete="off" autocorrect="off" aria-label="{{ 'search.autocomplete.input_placeholder' | t }}" placeholder="{{ 'search.autocomplete.input_placeholder' | t }}" value="{{ search.terms | escape }}">
-          </form>
-
-          <a href="#" class="header__link header__search-close" data-action="close-search">
-            {% render 'icon' with 'close-thin' %}
-          </a>
-
-          <div class="autocomplete">
-            <span class="autocomplete__spinner" style="display: none">
-              <svg width="50" height="50" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="{{ settings.header_color }}">
-                <g fill="none" fill-rule="evenodd">
-                  <g transform="translate(1 1)" stroke-width="2">
-                    <circle stroke-opacity=".5" cx="18" cy="18" r="18"></circle>
-                    <path d="M36 18c0-9.94-8.06-18-18-18"></path>
-                  </g>
-                </g>
-              </svg>
-            </span>
-          </div>
-        </div>
       </div>
-
-      <div class="header__item no-float header__item-cart">
-        <a href="/cart" class="header__link" {% if settings.cart_page == 'drawer' and template != 'cart' %}data-action="open-mini-cart"{% endif %}>
-          <div class="cart-icon-wrapper cart-icon-wrapper--has-items" {% if cart.item_count == 0 %}style="display: none"{% endif %}>
-            <div class="desk-header-item header-navigation-text-link">
-              <span class="cart-text">{{ 'cart.general.title' | t }}<span class="cart-icon-wrapper__count">({{ cart.item_count }})</span></span>
-            </div>
-            <div class="mobile-header-item">
-              {% include 'icon' with 'cart-full' %}
-              <span class="cart-icon-wrapper__count">({{ cart.item_count }})</span>
-            </div>
-          </div>
-          <div class="cart-icon-wrapper cart-icon-wrapper--empty" {% unless cart.item_count == 0 %}style="display: none"{% endunless %}>
-            <div class="header-navigation-text-link cart-text desk-header-item">{{ 'cart.general.title' | t }}</div>
-            <div class="mobile-header-item">{% include 'icon' with 'cart-empty' %}</div>
-          </div>
-        </a>
-      </div> 
     </div>
-
-    {% comment %} NEW CART ITEM NOT LINING UP PROPERLY SO USING THE OLD ONE
-       <div class="header__item header__item-cart">
-      <a href="{{ routes.cart_url }}" class="header__link" {% if settings.cart_page == 'drawer' and template != 'cart' %}data-action="open-mini-cart"{% endif %}>
-        <div class="cart-icon-wrapper cart-icon-wrapper--has-items" {% if cart.item_count == 0 %}style="display: none"{% endif %}>
-          <span class="cart-icon-wrapper__count">{{ cart.item_count }}</span>
-          {% render 'icon' with 'cart-full' %}
-        </div>
-        <div class="cart-icon-wrapper cart-icon-wrapper--empty" {% unless cart.item_count == 0 %}style="display: none"{% endunless %}>
-          {% render 'icon' with 'cart-empty' %}
-        </div>
-      </a>
-    </div> {% endcomment %}
   </div>
-
-  
 </header>
-{% endif %}
 
 
 
