--- a/sections/image-and-text.liquid
+++ b/sections/image-and-text.liquid
@@ -1,92 +1,281 @@
 {%- style -%}
+
+.absolute-img {
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+}
+@media (max-width: 480px) {
+ .absolute-img { position: static}
+}
+
+.img-text-button {
+  text-align: center;
+  padding: 0.5rem 1rem;
+  border: solid 0.1px black;
+  z-index: 100;
+  transition: all .5s ease;
+  color: white;
+  background: black;
+}
+.img-text-button:hover {
+  background: white;
+  border: solid 0.1px black;
+  color: black;
+}
+.info-wrapper {
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+}
+
+.elements-grid {
+  display: grid;
+  width: 100%;  
+}
+
+.single-block {
+  width: 50%;
+}
+.two-blocks {
+display: grid; 
+grid-template-columns: repeat(2 ,1fr);" 
+width: 100%; 
+}
+.only-mobile {
+  display: none;
+}
+@media (max-width: 480px) {
+  .only-mobile {
+    display: block;
+  }
+  .only-desktop {
+    display: none;
+  }
+}
+.img-button-wrapper {
+  position: absolute;
+  width:100%;
+  display: flex;
+  padding: 0 16px;
+}
+@media (min-width: 600px) {
+  .desktop-width-100 {
+      width: 100%
+    }
+    .desktop-width-95 {
+      width: 95%
+    }
+    .desktop-width-90 {
+      width: 90%
+    }
+    .desktop-width-85 {
+      width: 85%
+    }
+    .desktop-width-80 {
+      width: 80%
+    }
+    .desktop-width-75 {
+      width: 75%
+    }
+    .desktop-width-70 {
+      width: 70%
+    }
+}
 @media (max-width: 600px) {
   .full-mobile {
     width: 100%;
   }
+  .single-block, .two-blocks {
+    display: none;
+  }
+  .info-wrapper {
+    position: absolute;
+    top: 30%;
+    color: white;
+    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.30) 50%, rgba(255,255,255,0) 100%);
+  }
+  .mobile-width-95 {
+      width: 95%
+    }
+    .mobile-width-90 {
+      width: 90%
+    }
+    .mobile-width-85 {
+      width: 85%
+    }
+    .mobile-width-80 {
+      width: 80%
+    }
+    .mobile-width-75 {
+      width: 75%
+    }
+    .mobile-width-70 {
+      width: 70%
+    }
+}
+.img-text-wrapper {
+  display: flex;
+  position: relative;
+  justify-content: center;
 }
 {%- endstyle -%}
 
 {%- liquid 
-   if section.settings.image-width 
-   assign image__width = section.settings.image-width 
-   else 
-   assign image__width = 7 
-   endif 
-   assign text__width = 12 | minus: image__width 
-  
-   if section.settings.button_type == 'button--link' 
-   assign link__class = 'arrow-link' 
-   else 
-   assign link__class = 'btn button' 
-   endif 
+  if section.settings.image-width 
+  assign image__width = section.settings.image-width 
+  else 
+  assign image__width = 7 
+  endif 
+  assign text__width = 12 | minus: image__width 
+
+  if section.settings.button_type == 'button--link' 
+  assign link__class = 'arrow-link' 
+  else 
+  assign link__class = 'btn button' 
+  endif
+
+  assign blocks_qty = section.blocks.size
+  if blocks_qty == 1
+    assign blocks_class = "single-block"
+  else 
+    assign blocks_class = "two-blocks"
+  endif
+  assign max-width = section.settings.max-width
+  assign max-width-mobile = section.settings.max-width-mobile
+
+
+  assign image_alt = section.settings.image.alt
+  assign  image_url_small = section.settings.image | img_url: '60x'
+  assign  image_url_210 = section.settings.image | img_url: '210x'
+  assign  image_url_420 = section.settings.image | img_url: '420x'
+  assign  image_url_730 = section.settings.image | img_url: '730x'
+  assign  image_url_1270 = section.settings.image | img_url: '1270x'
+  assign  image_url_1650 = section.settings.image | img_url: '1650x'
+  assign  image_url_2000 = section.settings.image | img_url: '2000x'
 -%}
 
-<div style="padding-top: {{section.settings.margin__top}}px; padding-bottom: {{section.settings.margin__bottom}}px">
-  {% capture image_layout %}
-  <div class="  feature-row__item feature-row__item-image col-xs-12 col-sm-6 col-md-{{image__width}} image__{{ section.settings.layout }}">
-      {% if section.settings.image != blank %}
-      {{ section.settings.image | img_url: '1000x1000' | img_tag: section.settings.image.alt, 'feature-row__image lazyload' }}
+{% capture image_layout %}
+<div class="col-xs-12 col-sm-6 full-mobile col-md-{{image__width}} image__{{ section.settings.layout }}; ">
+  {% if section.settings.image != blank %}
+    <img loading="lazy"  src="{{ image_url_small }}"
+      data-srcset="{{ image_url_210 }} 210w, {{ image_url_420 }} 420w, {{ image_url_730 }} 730w  {{ image_url_1270 }} 1270w, {{ image_url_1650 }} 1650w,  {{ image_url_2000 }} 2000w,"
+      alt="{{ image_alt }}"
+      class="absolute-img lazyload"
+      style="top: {{section.settings.img-top}}rem; left: {{section.settings.img-left}}rem"
+          />
       {% else %}
       {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
       {% endif %}
+      {% if section.settings.img_text != blank %}
+        <div class="img-button-wrapper" style="justify-content: {{section.settings.btn-align}};top: {{section.settings.btn-top}}%;">
+          <button class="img-text-button only-mobile">{{section.settings.img_text}}</button>
+        </div>
+      {% endif %}
   </div>
-  {% endcapture %}
+{% endcapture %}
 
-
-
-  <div class="page-width feature-row" style="background: {{ section.settings.background-color }}">
-
+<div class="img-text-wrapper" style="padding-top: {{section.settings.margin__top}}px; padding-bottom: {{section.settings.margin__bottom}}px;">
+  <div class="page-width feature-row desktop-width-{{max-width}} mobile-width-{{max-width-mobile}}" style="background: {{ section.settings.background-color }}">
     {% if section.settings.button_link != blank %}
     <a href="{{ section.settings.button_link }}" class="wrapper-link">
       {% endif %}
     <div class="row">
-
-
-
           {% if section.settings.layout == 'left' %}
           {{ image_layout }}
           {% endif %}
-
-          <div class="full-mobile feature-row__item feature-row__text feature-row__text--{{ section.settings.text-layout }} col-xs-12 col-sm-6 col-md-{{ text__width }}" style="display: flex; align-items: {{ section.settings.text-vertical }};">
-
+          <div class="info-wrapper full-mobile feature-row__item feature-row__text feature-row__text--{{ section.settings.text-layout }} col-xs-12 col-sm-6 col-md-{{ text__width }}" style="justify-content: {{ section.settings.text-vertical }};">
             <div class="feature-row__text-wrapper clear">
-
               <h2>
                 {% if section.settings.title != blank %}
                   <span class="h3">{{ section.settings.title | escape }}</span>
                 {% endif %}
-
                 {% if section.settings.text != blank %}
                   <span class="rte-setting featured-row__subtext">{{ section.settings.text }}</span>
                 {% endif %}
               </h2>
-
               {% if section.settings.small_text != blank %}
                 <div>{{ section.settings.small_text }}</div>
               {% endif %}
-
               {% if section.settings.button_label != blank and section.settings.button_link != blank %}
-                <span class="cta {{ link__class }} {{ section.settings.button_type }} align-{{ section.settings.button-alignment }}" >
+                <button class="img-text-button only-desktop" style="margin-top: 2rem; text-align: {{section.settings.button-alignment}}" >
                   {{ section.settings.button_label }}
-                </span>
+                </button>
               {% endif %}
+            </div>
+            {% if section.settings.button_link != blank %}
+          </a>
+          {% endif %}
+            <div class="{{ blocks_class }}">
+            {%- liquid 
+                for block in section.blocks
+                    case block.type
+                      when 'product'
+                        render 'block__product_row',block: block, hide_price: hide_price, text_align: text_align, pt: pt, px: px, font_md: font_md, font_sm: font_sm
+                      when 'collection'
+                        render 'block__collection_row', block: block, text_align: text_align, pt: pt, px: px, font_md: font_md, font_sm: font_sm
+                      when 'hover_image'
+                        render 'block__hover-image_row', block: block, text_align: text_align, pt: pt, px: px, font_md: font_md, font_sm: font_sm
+                    endcase
+                endfor
+                -%}
             </div>
           </div>
           {% if section.settings.layout == 'right' %}
-          {{ image_layout }}
+              {{ image_layout }}
           {% endif %}
     </div>
-      {% if section.settings.button_link != blank %}
-    </a>
-    {% endif %}
   </div>
 </div>
 
 
+{% comment %} {
+      "type": "select",
+      "id": "button_type",
+      "label": "Button Type",
+      "options": [
+        {
+          "value": "button--link",
+          "label": "Link"
+        },
+        {
+          "value": "button--transparent",
+          "label": "Transparent"
+        },
+        {
+          "value": "button--secondary",
+          "label": "Button Secondary"
+        },
+        {
+          "value": "button--primary",
+          "label": "Button Primary"
+        }
+      ]
+    }, {% endcomment %}
+
 {% schema %}
 {
   "name": "Image with text",
+  "max_blocks": 2,
   "settings": [
+    {
+      "label": "Container Size Desktop",
+      "type": "range",
+      "id": "max-width",
+      "min": 70,
+      "max": 100,
+      "step": 5,
+      "default": 100
+    },
+    {
+      "label": "Container Size Mobile",
+      "type": "range",
+      "id": "max-width-mobile",
+      "min": 70,
+      "max": 100,
+      "step": 5,
+      "default": 100
+    },
     {
       "type": "color",
       "id": "background-color",
@@ -94,9 +283,79 @@
       "default": "#ffffff"
     },
     {
+      "type": "select",
+      "id": "layout",
+      "label": "Layout",
+      "default": "left",
+      "options": [
+        {
+          "value": "left",
+          "label": "Image on left/Mobile Top"
+        },
+        {
+          "value": "right",
+          "label": "Image on right/Mobile Bottom"
+        }
+      ]
+    },
+    {
       "type": "image_picker",
       "id": "image",
       "label": "Image"
+    },
+    {
+      "label": "Image Custom X alignment",
+      "type": "range",
+      "id": "img-left",
+      "min": -25,
+      "max": 25,
+      "step": 0.5,
+      "default": 0
+    },
+    {
+      "label": "Image Custom Y alignment",
+      "type": "range",
+      "id": "img-top",
+      "min": -25,
+      "max": 25,
+      "step": 0.5,
+      "default": 0
+    },
+    {
+      "type": "text",
+      "id": "img_text",
+      "label": "Image Button Text",
+      "default": "Shop Collection"
+    },
+    {
+      "type": "range",
+      "id": "btn-top",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "unit": "%",
+      "label": "Button Y-Axis Position",
+      "default": 89
+    },
+    {
+      "type": "select",
+      "id": "btn-align",
+      "label": "Button Horizontal Alignment",
+      "default": "center",
+      "options": [
+        {
+          "value": "flex-start",
+          "label": "Left"
+        },
+        {
+          "value": "flex-end",
+          "label": "Right"
+        },
+        {
+          "value": "center",
+          "label": "Center"
+        }
+      ]
     },
     {
       "type": "url",
@@ -152,22 +411,6 @@
         {
           "value": "8",
           "label": "8"
-        }
-      ]
-    },
-    {
-      "type": "select",
-      "id": "layout",
-      "label": "Layout",
-      "default": "left",
-      "options": [
-        {
-          "value": "left",
-          "label": "Image on left/Mobile Top"
-        },
-        {
-          "value": "right",
-          "label": "Image on right/Mobile Bottom"
         }
       ]
     },
@@ -229,29 +472,7 @@
       "label": "Small Text",
       "default": "<p>This can be a small text giving extra info</p>"
     },
-    {
-      "type": "select",
-      "id": "button_type",
-      "label": "Button Type",
-      "options": [
-        {
-          "value": "button--link",
-          "label": "Link"
-        },
-        {
-          "value": "button--transparent",
-          "label": "Transparent"
-        },
-        {
-          "value": "button--secondary",
-          "label": "Button Secondary"
-        },
-        {
-          "value": "button--primary",
-          "label": "Button Primary"
-        }
-      ]
-    },
+    
     {
       "type": "select",
       "id": "button-alignment",
@@ -276,6 +497,205 @@
       "type": "text",
       "id": "button_label",
       "label": "Button label"
+    }
+  ],
+  "blocks": [
+    {
+      "type": "product",
+      "name": "Product",
+      "settings": [
+        {
+          "type": "paragraph",
+          "content": "Always Save after changes to display images properly. If images continue not to display after a few seconds, reload the page"
+        },
+        {
+          "type": "product",
+          "id": "product",
+          "label": "Product"
+        },
+        {
+          "label": "Text Vertical Align",
+          "type": "range",
+          "id": "text_top",
+          "min": 0,
+          "max": 100,
+          "step": 1,
+          "default": 100
+        },
+        {
+          "type": "checkbox",
+          "id": "custom_align",
+          "label": "Allow horizontal align",
+          "info": "This will override the Section's text-align setting",
+          "default": false
+        },
+        {
+          "type": "select",
+          "id": "text_horizontal_align",
+          "label": "Custom Text Alignment",
+          "info": "Will work only if 'Allow horizontal align' is checked",
+          "default": "center",
+          "options": [
+            {
+              "value": "center",
+              "label": "Center"
+            },
+            {
+              "value": "left",
+              "label": "Left"
+            },
+            {
+              "value": "right",
+              "label": "Right"
+            }
+          ]
+        },
+        {
+        "type": "color",
+        "id": "text_color",
+        "label": "Text Color",
+        "default" : "#000000"
+        },
+        {
+          "type": "checkbox",
+          "id": "show_info",
+          "label": "Show Text",
+          "default": true
+        }
+      ]
+    },
+    {
+      "type": "collection",
+      "name": "Collection",
+      "settings": [
+        {
+          "type": "paragraph",
+          "content": "Always Save after changes to display images properly. If images continue not to display after a few seconds, reload the page"
+        },
+        {
+          "type": "collection",
+          "id": "collection",
+          "label": "Collection"
+        },
+        {
+          "type": "checkbox",
+          "id": "show_info",
+          "label": "Show Text",
+          "default": true
+        },
+        {
+          "label": "Text Vertical Align",
+          "type": "range",
+          "id": "text_top",
+          "min": 0,
+          "max": 100,
+          "step": 1,
+          "default": 100
+        },
+        {
+          "type": "checkbox",
+          "id": "custom_align",
+          "label": "Allow horizontal align",
+          "info": "This will override the Section's text-align setting",
+          "default": false
+        },
+        {
+          "type": "select",
+          "id": "text_horizontal_align",
+          "label": "Custom Text Alignment",
+          "info": "Will work only if 'Allow horizontal align' is checked",
+          "default": "center",
+          "options": [
+            {
+              "value": "center",
+              "label": "Center"
+            },
+            {
+              "value": "left",
+              "label": "Left"
+            },
+            {
+              "value": "right",
+              "label": "Right"
+            }
+          ]
+        },
+        {
+        "type": "color",
+        "id": "text_color",
+        "label": "Text Color",
+        "default" : "#000000"
+        }
+      ]
+    },
+    {
+      "type":"hover_image",
+      "name":"Hover image",
+      "settings":[ 
+        {
+        "type":"url",
+        "id":"image_link",
+        "label":"Link (optional)"
+        },
+        {
+        "type": "image_picker",
+        "id": "image",
+        "label": "Image"
+        },
+        {
+        "type": "image_picker",
+        "id": "image_2",
+        "label": "Hover Image (optional)"
+        },
+        {
+        "type": "text",
+        "id": "image_text",
+        "label": "Text (optional)"
+        },
+        {
+          "label": "Text Vertical Align",
+          "type": "range",
+          "id": "text_top",
+          "min": 0,
+          "max": 100,
+          "step": 1,
+          "default": 100
+        },
+        {
+          "type": "checkbox",
+          "id": "custom_align",
+          "label": "Allow horizontal align",
+          "info": "This will override the Section's text-align setting",
+          "default": false
+        },
+        {
+          "type": "select",
+          "id": "text_horizontal_align",
+          "label": "Custom Text Alignment",
+          "info": "Will work only if 'Allow horizontal align' is checked",
+          "default": "center",
+          "options": [
+            {
+              "value": "center",
+              "label": "Center"
+            },
+            {
+              "value": "left",
+              "label": "Left"
+            },
+            {
+              "value": "right",
+              "label": "Right"
+            }
+          ]
+        },
+        {
+        "type": "color",
+        "id": "text_color",
+        "label": "Text Color",
+        "default" : "#000000"
+        }
+      ]
     }
   ],
   "presets": [
