--- a/snippets/block__product_row.liquid
+++ b/snippets/block__product_row.liquid
@@ -26,7 +26,6 @@
     opacity: 0
   }
   .title_wrapper {
-    position: absolute;
     width: 100%;
     z-index: 20;
   }
@@ -59,6 +58,7 @@
   assign top = block.settings.text_top
   assign horizontal_align = block.settings.text_horizontal_align
   assign color = block.settings.text_color
+  assign absolute = block.settings.text_absolute
       
   case blocks_qty
     when 1
@@ -92,6 +92,7 @@
    assign  image_url_1650_2 = product.images[1] | img_url: '1650x'
    assign  image_url_2000_2 = product.images[1] | img_url: '2000x'
 -%}
+<div>
   <a href="{{ product.url | within: collection }}">
     <div class="hover-wrapper">
         <img loading="lazy"  src="{{ image_url_small }}"
@@ -108,7 +109,7 @@
         {% endif %}
         {% if block.settings.show_info %}
           <div class="section_align">
-            <div class="title_wrapper" style="top: {{ top }}%; {% if custom_align %}text-align: {{ horizontal_align }} ;{% endif %} color: {{ color }}; padding: {{ pt }}rem {{ px }}rem 0rem {{ px }}rem !important;">
+            <div class="title_wrapper" style="{% if absolute and top != blank %}position: absolute; top: {{top}}% {% endif %}; {% if custom_align %}text-align: {{ horizontal_align }} ;{% endif %} color: {{ color }}; padding: {{ pt }}rem {{ px }}rem 0rem {{ px }}rem !important;">
               <p>{{ product.title }}</p>
               {% unless hide_price %}
                 <p class="price" data-money-convertible>{{ product.first_available_variant.price | money_without_trailing_zeros }}</p>
@@ -118,4 +119,5 @@
         {% endif %}
     </div>
   </a>
+</div>
 
