--- a/snippets/shop-the-look-displayed-1.liquid
+++ b/snippets/shop-the-look-displayed-1.liquid
@@ -111,11 +111,10 @@
   }
   
   .stl-wrapper {
-    max-width: 880px;
+    max-width: {{section.settings.max-width}}%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;    
-    margin-top: 50px;
     justify-content: space-between;
     align-items: center;
   }
@@ -135,7 +134,6 @@
     width: 50%;
   }
   .stl-left {
-    padding: 0 10px;
     transition: all .3s ease;
   }
   .item-info {
@@ -182,7 +180,7 @@
   .stl-item .title {
     font-weight: normal;
     margin: 10px 0;
-    font-size: 15px;
+    font-size: 23px;
   }
 
   .stl-item .price {
@@ -351,7 +349,7 @@
     .stl-mobile-btns a {
     }
     .stl-wrapper {
-      padding: 0 20px;
+      padding: 0;
       justify-content: center;
     }
     .stl-right-header {
@@ -416,108 +414,125 @@
     margin: 0 !important;
 }
 </style>
-
-<div class="index--shop-the-look">
-  <div class="stl-wrapper">
-    <div class="stl-left">
-      <div class="stl-left--inner">
-        {% if section.settings.image != blank %}
-          {%- liquid 
-            assign image_alt_1 = section.settings.image.alt
-            assign  image_url_small_1 = section.settings.image | img_url: '60x'
-            assign  image_url_210_1 = section.settings.image | img_url: '210x'
-            assign  image_url_420_1 = section.settings.image | img_url: '420x'
-            assign  image_url_730_1 = section.settings.image | img_url: '730x'
-            assign  image_url_1270_1 = section.settings.image | img_url: '1270x'
-            assign  image_url_1650_1 = section.settings.image | img_url: '1650x'
-            assign  image_url_2000_1 = section.settings.image | img_url: '2000x'
-            -%}
-            <img loading="lazy"  src="{{ image_url_small_1 }}"
-              data-srcset="{{ image_url_210_1 }} 210w, {{ image_url_420_1 }} 420w, {{ image_url_730_1 }} 730w  {{ image_url_1270_1 }} 1270w, {{ image_url_1650_1 }} 1650w,  {{ image_url_2000_1 }} 2000w"
-              data-sizes="auto"  alt="{{ image_alt_1 }}"
-              class="lazyload"
-              />
+{% capture stl_image %}
+  <div class="stl-left">
+    <div class="stl-left--inner">
+      {% if section.settings.image != blank %}
+        {%- liquid 
+          assign image_alt_1 = section.settings.image.alt
+          assign  image_url_small_1 = section.settings.image | img_url: '60x'
+          assign  image_url_210_1 = section.settings.image | img_url: '210x'
+          assign  image_url_420_1 = section.settings.image | img_url: '420x'
+          assign  image_url_730_1 = section.settings.image | img_url: '730x'
+          assign  image_url_1270_1 = section.settings.image | img_url: '1270x'
+          assign  image_url_1650_1 = section.settings.image | img_url: '1650x'
+          assign  image_url_2000_1 = section.settings.image | img_url: '2000x'
+          -%}
+          <img loading="lazy"  src="{{ image_url_small_1 }}"
+            data-srcset="{{ image_url_210_1 }} 210w, {{ image_url_420_1 }} 420w, {{ image_url_730_1 }} 730w  {{ image_url_1270_1 }} 1270w, {{ image_url_1650_1 }} 1650w,  {{ image_url_2000_1 }} 2000w"
+            data-sizes="auto"  alt="{{ image_alt_1 }}"
+            class="lazyload"
+            />
+      {% endif %}
+      {% for block in section.blocks %}
+        {% if block.settings.product != blank %}
+          <span class="stl-dot" data-index="{{ forloop.index0 }}" style="top:{{ block.settings.top }}%;left:{{ block.settings.left }}%;"></span>
         {% endif %}
+      {% endfor %}
+    </div>
+  </div>
+{% endcapture %}
+
+{% capture stl_products %}
+  <div class="stl-itemlist">
+    {% comment %} <div class="stl-itemlist-header">
+      {% if section.settings.subtitle != blank %}<h3 class="subtitle">{{ section.settings.subtitle }}</h3>{% endif %}
+    </div> {% endcomment %}
+    {% for block in section.blocks %}
+      {% if block.settings.product != blank %}
+      {%- liquid
+        assign thisProduct = all_products[block.settings.product]
+        assign image_alt = thisProduct.alt
+        assign  image_url_small = thisProduct | img_url: '60x'
+        assign  image_url_210 = thisProduct | img_url: '210x'
+        assign  image_url_420 = thisProduct | img_url: '420x'
+        assign  image_url_730 = thisProduct | img_url: '730x'
+        -%}
+        <div class="stl-item" id="{{ forloop.index0 }}">
+          <a class="limited-height" href="{{ thisProduct.url }}">
+            <img loading="lazy"  src="{{ image_url_small }}"
+        data-srcset="{{ image_url_210 }} 210w, {{ image_url_420 }} 420w, {{ image_url_730 }} 730w"
+        data-sizes="auto"  alt="{{ image_alt }}"
+        class="stl-img lazyload"
+        />
+          </a>
+          <div class="item-info">
+            <h4 class="title">{{ thisProduct.title }}</h4>
+            {% comment %} <h5 class="price">{{ thisProduct.price | money }}</h5> {% endcomment %}
+            <a href="{{ thisProduct.url }}" id="btn-{{ forloop.index0 }}" class="stl-btn">{{ section.settings.cta_text }}</a>
+          </div>
+        </div>
+      {% endif %}
+    {% endfor %}
+  </div>
+{% endcapture %}
+
+{% capture stl_mobileproducts %}
+  <div class="stl-right">
+    <div class="stl-right--inner">
+      <div class="stl-right-header">
+        <span>
+          <svg class="Icon Icon--close" role="presentation" viewBox="0 0 16 14">
+            <path d="M15 0L1 14m14 0L1 0" stroke="currentColor" fill="none" fill-rule="evenodd"></path>
+          </svg>
+        </span>
+        {% if section.settings.subtitle != blank %}<h3 class="subtitle">{{ section.settings.subtitle }}</h3>{% endif %}
+      </div>
+      <div class="stl-right--slider">
         {% for block in section.blocks %}
-          {% if block.settings.product != blank %}
-            <span class="stl-dot" data-index="{{ forloop.index0 }}" style="top:{{ block.settings.top }}%;left:{{ block.settings.left }}%;"></span>
-          {% endif %}
+        {% if block.settings.product != blank %}
+          {%- liquid
+            assign thisProduct = all_products[block.settings.product]
+            assign image_alt = thisProduct.alt
+            assign  image_url_small = thisProduct | img_url: '60x'
+            assign  image_url_210 = thisProduct | img_url: '210x'
+            assign  image_url_420 = thisProduct | img_url: '420x'
+            assign  image_url_730 = thisProduct | img_url: '730x'
+            -%}
+        <div class="stl-item">
+          <a class="limited" href="{{ thisProduct.url }}">
+          <div class="stl-img">
+              <img loading="lazy"  src="{{ image_url_small }}"
+            data-srcset="{{ image_url_210 }} 210w, {{ image_url_420 }} 420w, {{ image_url_730 }} 730w"
+            data-sizes="auto"  alt="{{ image_alt }}"
+            class="lazyload"
+            />
+          </div>
+          <h4 class="title">{{ thisProduct.title }}</h4>
+          <h5 class="price">{{ thisProduct.price | money }}</h5>
+          </a>
+          <a href="{{ thisProduct.url }}" class="stl-btn">{{ section.settings.cta_text }}</a>
+        </div>
+        {% endif %}
         {% endfor %}
       </div>
     </div>
-    <div class="stl-right">
-      <div class="stl-right--inner">
-        <div class="stl-right-header">
-          <span>
-            <svg class="Icon Icon--close" role="presentation" viewBox="0 0 16 14">
-              <path d="M15 0L1 14m14 0L1 0" stroke="currentColor" fill="none" fill-rule="evenodd"></path>
-            </svg>
-          </span>
-          {% if section.settings.subtitle != blank %}<h3 class="subtitle">{{ section.settings.subtitle }}</h3>{% endif %}
-        </div>
-        <div class="stl-right--slider">
-          {% for block in section.blocks %}
-          {% if block.settings.product != blank %}
-            {%- liquid
-              assign thisProduct = all_products[block.settings.product]
-              assign image_alt = thisProduct.alt
-              assign  image_url_small = thisProduct | img_url: '60x'
-              assign  image_url_210 = thisProduct | img_url: '210x'
-              assign  image_url_420 = thisProduct | img_url: '420x'
-              assign  image_url_730 = thisProduct | img_url: '730x'
-              -%}
-          <div class="stl-item">
-            <a class="limited" href="{{ thisProduct.url }}">
-            <div class="stl-img">
-               <img loading="lazy"  src="{{ image_url_small }}"
-              data-srcset="{{ image_url_210 }} 210w, {{ image_url_420 }} 420w, {{ image_url_730 }} 730w"
-              data-sizes="auto"  alt="{{ image_alt }}"
-              class="lazyload"
-              />
-            </div>
-            <h4 class="title">{{ thisProduct.title }}</h4>
-            <h5 class="price">{{ thisProduct.price | money }}</h5>
-            </a>
-            <a href="{{ thisProduct.url }}" class="stl-btn">{{ section.settings.cta_text }}</a>
-          </div>
-          {% endif %}
-          {% endfor %}
-        </div>
-      </div>
-      <div class="stl-mobile-btns">
-        <a href="javascript:void(0);" onclick="$('.stl-dot--active').trigger('click')" data-index="{{ forloop.index0 }}" {% if forloop.first %}style="display:block;"{% endif %} class="stl-btn">{{ section.settings.cta_text_mobile }}</a>
-      </div>
+    <div class="stl-mobile-btns">
+      <a href="javascript:void(0);" onclick="$('.stl-dot--active').trigger('click')" data-index="{{ forloop.index0 }}" {% if forloop.first %}style="display:block;"{% endif %} class="stl-btn">{{ section.settings.cta_text_mobile }}</a>
     </div>
-    <div class="stl-itemlist">
-        {% comment %} <div class="stl-itemlist-header">
-          {% if section.settings.subtitle != blank %}<h3 class="subtitle">{{ section.settings.subtitle }}</h3>{% endif %}
-        </div> {% endcomment %}
-          {% for block in section.blocks %}
-            {% if block.settings.product != blank %}
-            {%- liquid
-              assign thisProduct = all_products[block.settings.product]
-              assign image_alt = thisProduct.alt
-              assign  image_url_small = thisProduct | img_url: '60x'
-              assign  image_url_210 = thisProduct | img_url: '210x'
-              assign  image_url_420 = thisProduct | img_url: '420x'
-              assign  image_url_730 = thisProduct | img_url: '730x'
-              -%}
-              <div class="stl-item" id="{{ forloop.index0 }}">
-                <a class="limited-height" href="{{ thisProduct.url }}">
-                  <img loading="lazy"  src="{{ image_url_small }}"
-              data-srcset="{{ image_url_210 }} 210w, {{ image_url_420 }} 420w, {{ image_url_730 }} 730w"
-              data-sizes="auto"  alt="{{ image_alt }}"
-              class="stl-img lazyload"
-              />
-                </a>
-                <div class="item-info">
-                  <h4 class="title">{{ thisProduct.title }}</h4>
-                  <h5 class="price">{{ thisProduct.price | money }}</h5>
-                  <a href="{{ thisProduct.url }}" id="btn-{{ forloop.index0 }}" class="stl-btn">{{ section.settings.cta_text }}</a>
-                </div>
-              </div>
-            {% endif %}
-          {% endfor %}
-    </div>
+  </div>
+{% endcapture %}
+
+<div class="index--shop-the-look">
+  <div class="stl-wrapper">
+    {% if section.settings.img_side == 'left' %}
+     	 {{ stl_image }}
+     	 {{ stl_mobileproducts }}
+     	 {{ stl_products }}
+    {% else %}
+      {{ stl_products }}
+      {{ stl_mobileproducts }}
+      {{ stl_image }}
+    {% endif %}    
   </div>  
 </div>
